--- a/6-oy.html
+++ b/6-oy.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NFT DARK</title>
-   <link rel="stylesheet" href="6-oy.css">
+   <link rel="stylesheet" href="./6-oy.css">
 </head>
 
 <body>
